# cuttlefish

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: comparative.rs  delta_i.rs  durable_admission.rs  escalation.rs  evaluation.rs  hardening.rs  kernel.rs  metrics_overhead.rs  multi_invariant.rs  network_simulation.rs  reanchor.rs  two_lane.rs
cuttlefish/: Cargo.toml
cuttlefish/benches/: comparative.rs  delta_i.rs  durable_admission.rs  escalation.rs  evaluation.rs  multi_invariant.rs  network_simulation.rs  reanchor.rs  two_lane.rs
cuttlefish/src/: lib.rs
cuttlefish/src/algebra/: causal_consistency.rs  classes.rs  composition.rs  proofs.rs
cuttlefish/src/core/: horizon.rs  kernel.rs  state.rs  view.rs
cuttlefish/src/core/persistence/: arena.rs  recovery.rs  worker.rs
cuttlefish/src/invariants/: monotonic.rs  uniqueness.rs
cuttlefish/src/network/: mod.rs  protocol.rs
cuttlefish/tests/: causality_correctness.rs
examples/: basic_kernel.rs  custom_invariant.rs  escalating_kernel.rs  graph_invariant.rs  multi_tenant.rs  two_lane_kernel.rs
src/: lib.rs
src/algebra/: causal_consistency.rs  classes.rs  composition.rs  escrow.rs  lattice.rs  mod.rs  proofs.rs
src/algebra/escrow/: mod.rs  pending.rs
src/core/: checkpoint.rs  fact.rs  frontier.rs  horizon.rs  invariant.rs  kernel.rs  metrics.rs  mod.rs  state.rs  topology.rs
src/core/metrics/: http.rs  mod.rs  prometheus.rs
src/core/persistence/: arena.rs  mod.rs  recovery.rs  ring.rs  worker.rs
src/invariants/: graph.rs  mod.rs  monotonic.rs  total_supply.rs  uniqueness.rs
src/network/: mod.rs  protocol.rs  worker.rs
tests/: algebraic_properties.rs  causality_correctness.rs  chaos_pipeline.rs  checkpoint_hardening.rs  distributed_convergence.rs  escrow_network_integration.rs  hard_shutdown_recovery.rs  no_std_compile.rs  proptest_commutativity.rs
