[package]
name = "ctfs"
version = "1.0.2"
edition = "2021"
description = "Causal consistency at nanosecond latency. Algebraic invariants without coordination."
license = "MIT"
repository = "https://github.com/abokhalill/cuttlefish"
documentation = "https://docs.rs/cuttlefish"
readme = "README.md"
keywords = ["distributed-systems", "causality", "crdt", "invariants", "consensus-free"]
categories = ["concurrency", "data-structures", "algorithms"]
authors = ["abokhalill"]

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["libc", "blake3/std"]
persistence = ["std", "io-uring", "crc32fast"]
networking = ["std", "tokio", "crc32fast"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
zerocopy = { version = "0.8.33", default-features = false, features = ["derive"] }
blake3 = { version = "1.5", default-features = false }
libc = { version = "0.2", optional = true }
tokio = { version = "1.48", features = ["net", "rt-multi-thread", "sync", "time", "macros", "io-util"], optional = true }
crc32fast = { version = "1.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.5"

[[bench]]
name = "delta_i"
harness = false

[[bench]]
name = "kernel"
harness = false

[[bench]]
name = "multi_invariant"
harness = false

[[bench]]
name = "reanchor"
harness = false

[[bench]]
name = "escalation"
harness = false

[[bench]]
name = "durable_admission"
harness = false
required-features = ["persistence"]

[[bench]]
name = "network_simulation"
harness = false
required-features = ["networking"]

[[bench]]
name = "two_lane"
harness = false

[[bench]]
name = "hardening"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "metrics_overhead"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
